# core-architecture

./: README.md  pyproject.toml
agent/: __init__.py  execution.py  memory.py  perception.py  planning.py  tools.py  tracing.py  types.py
cli/: __init__.py  main.py
data/: trace_20260430_224539.jsonl  trace_20260430_224551.jsonl
tests/: __init__.py  test_execution.py  test_memory.py  test_perception.py  test_tools.py
