[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-core-architecture"
version = "0.1.0"
description = "A minimal, testable, explainable Agent core architecture implementation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Agent Architecture Team" }
]
keywords = ["agent", "llm", "architecture", "ai"]

[project.scripts]
agent = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
